--- a/README.Rmd
+++ b/README.Rmd
@@ -23,41 +23,12 @@ The goal of catchment is to ...
 
 ## Installation
 
-Before installing this package, first you will need to install the R-INLA and Template Model Builder packages.
+Before installing this package, first you will need to install the [R-INLA](https://www.r-inla.org/home) and [Template Model Builder (TMB)](https://github.com/kaskr/adcomp) packages. These packages are not on CRAN, and the installation process may depend on the type of computer you are using. I recommend following the [installation instructions for INLA](<https://www.r-inla.org/download-install>) first, and then install TMB. Be sure to close out of any active R session before installation!
 
-```{r eval=FALSE}
-# install.packages("devtools")
-devtools::install_github("PATH-Global-Health/catchment")
-```
-
-You can install the development version of catchment from [GitHub](https://github.com/) with:
+The catchment package is also not on CRAN (yet!). You can install the development version of catchment from [GitHub](https://github.com/) with:
 
 ``` r
 # install.packages("devtools")
 devtools::install_github("PATH-Global-Health/catchment")
 ```
 
-## Example
-
-This is a basic example which shows you how to solve a common problem:
-
-```{r example}
-library(catchment)
-## basic example code
-```
-
-What is special about using `README.Rmd` instead of just `README.md`? You can include R chunks like so:
-
-```{r cars}
-summary(cars)
-```
-
-You'll still need to render `README.Rmd` regularly, to keep `README.md` up-to-date. `devtools::build_readme()` is handy for this. You could also use GitHub Actions to re-render `README.Rmd` every time you push. An example workflow can be found here: <https://github.com/r-lib/actions/tree/v1/examples>.
-
-You can also embed plots, for example:
-
-```{r pressure, echo = FALSE}
-plot(pressure)
-```
-
-In that case, don't forget to commit and push the resulting figure files, so they display on GitHub and CRAN.
